@@ -1,6 +1,7 @@
 package io.openbas.service;
 
 import io.openbas.database.model.InjectExpectation;
+import io.openbas.database.model.Team;
 import io.openbas.database.model.User;
 import io.openbas.database.repository.InjectExpectationRepository;
 import io.openbas.rest.exception.ElementNotFoundException;
@@ -21,13 +22,18 @@ public class MigrationService {
 
   public void processExpectations() {
     log.info("Process expectations started.");
+    List<InjectExpectation> injectExpectations = injectExpectationRepository.findAll();
 
-    Set<InjectExpectation> injectExpectations = injectExpectationRepository.findAll();
+    if (injectExpectations == null || injectExpectations.isEmpty()) {
+      log.info("No expectations found.");
+      return;
+    }
+
     log.info("Fetched " + injectExpectations.size() + " expectations.");
 
     Map<String, List<InjectExpectation>> groupedExpectations =
         injectExpectations.stream()
-            .filter(e -> e.getTeam() != null)
+            .filter(e -> e.getTeam() != null && e.getInject() != null)
             .collect(
                 Collectors.groupingBy(
                     e -> e.getInject().getId() + "|" + e.getTeam().getId() + "|" + e.getName()));
@@ -45,39 +51,55 @@ public class MigrationService {
   private void processGroupedExpectations(
       Map<String, List<InjectExpectation>> groupedExpectations,
       Set<InjectExpectation> expectationsToCreate) {
+
     for (Map.Entry<String, List<InjectExpectation>> entry : groupedExpectations.entrySet()) {
       String groupKey = entry.getKey();
       List<InjectExpectation> expectationList = entry.getValue();
 
       log.info("Processing group: " + groupKey);
-      log.info("Expectations in this : " + expectationList.size());
+      log.info("Expectations in this group: " + expectationList.size());
 
       boolean requireTeamExpectation = expectationList.stream().noneMatch(e -> e.getUser() == null);
       boolean requireUserExpectation = expectationList.stream().noneMatch(e -> e.getUser() != null);
 
       if (requireTeamExpectation) {
-        log.info("Creating team expectation for : " + groupKey);
+        log.info("Creating team expectation for: " + groupKey);
         InjectExpectation newInjectExpectation =
             CopyObjectListUtils.copyObjectWithoutId(
-                expectationList.stream().findAny().orElseThrow(ElementNotFoundException::new),
+                expectationList.stream()
+                    .findAny()
+                    .orElseThrow(() -> new ElementNotFoundException("No expectations available.")),
                 InjectExpectation.class);
         newInjectExpectation.setId(UUID.randomUUID().toString());
         newInjectExpectation.setUser(null);
         expectationsToCreate.add(newInjectExpectation);
       }
+
       if (requireUserExpectation) {
-        log.info("Creating user expectation for : " + groupKey);
+        log.info("Creating user expectation for: " + groupKey);
         InjectExpectation newInjectExpectation =
             CopyObjectListUtils.copyObjectWithoutId(
-                expectationList.stream().findAny().orElseThrow(ElementNotFoundException::new),
+                expectationList.stream()
+                    .findAny()
+                    .orElseThrow(() -> new ElementNotFoundException("No expectations available.")),
                 InjectExpectation.class);
         newInjectExpectation.setId(UUID.randomUUID().toString());
-        List<User> users = expectationList.getFirst().getTeam().getUsers();
-        if (!users.isEmpty()) {
-          newInjectExpectation.setUser(users.get(0));
-          expectationsToCreate.add(newInjectExpectation);
-        } else {
-          injectService.tryInject(expectationList.getFirst().getInject().getId());
+
+        // Safely access the team and users
+        Team team = expectationList.get(0).getTeam();
+        if (team != null) {
+          List<User> users = team.getUsers();
+          if (users != null && !users.isEmpty()) {
+            newInjectExpectation.setUser(users.get(0));
+            expectationsToCreate.add(newInjectExpectation);
+          } else {
+            String injectId = expectationList.get(0).getInject().getId();
+            if (injectId != null) {
+              // Since the team has no users, we run this inject to synchronize the expectations
+              // with the current model
+              injectService.tryInject(injectId);
+            }
+          }
         }
       }
     }
